admin portal design (beta)

--- a/public/css/admin_portal.css
+++ b/public/css/admin_portal.css
@@ -7,7 +7,7 @@ body {
     background: var(--color2);
     margin: 0;
     font-family: 'Montserrat';
-    color: #fff;
+    color: #ebdbb2;
     padding-left: 240px;
 }
 main {
