--- a/views/student_edit.ejs
+++ b/views/student_edit.ejs
@@ -6,6 +6,21 @@
     <title>Student Edit</title>
   </head>
   <body>
+    <button 
+    style=
+     "background-color: #282828;
+      border: 1px solid #ebdbb2;
+      color: #ebdbb2;
+      padding: 20px 20px;
+      text-align: center;
+      font-size: 20px;
+      position: absolute;
+      top:50px;
+      left:80px;
+      border-radius: 10px;"
+      onclick="window.location.href = '/admin/admin_portal';">
+      Back
+    </button>
     <!-- Roll No. -->
     <%=roll_no%>
 
