--- a/views/super/batch_add.ejs
+++ b/views/super/batch_add.ejs
@@ -17,5 +17,22 @@
       </label>
       <button type="submit">SUBMIT</button>
     </form>
+    <button
+      style="
+        background-color: #282828;
+        border: 1px solid #fabd2f;
+        color: #ebdbb2;
+        padding: 20px 20px;
+        text-align: center;
+        font-size: 20px;
+        position: absolute;
+        top: 50px;
+        left: 80px;
+        border-radius: 10px;
+      "
+      onclick="window.location.href = '/super/portal';"
+    >
+      Back
+    </button>
   </body>
 </html>
