--- a/views/super/table.ejs
+++ b/views/super/table.ejs
@@ -11,7 +11,23 @@
     <p style="color: white;"><%=item%>: <%=row[item]%></p>
     <%}%>
     <br />
-
     <%}%>
+    <button
+      style="
+        background-color: #282828;
+        border: 1px solid #fabd2f;
+        color: #ebdbb2;
+        padding: 20px 20px;
+        text-align: center;
+        font-size: 20px;
+        position: absolute;
+        top: 50px;
+        left: 80px;
+        border-radius: 10px;
+      "
+      onclick="window.location.href = '/super/portal';"
+    >
+      Back
+    </button>
   </body>
 </html>
