--- a/views/super_portal.ejs
+++ b/views/super_portal.ejs
@@ -27,7 +27,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getAdminId()">
+          <button onclick="getAdminId()" type="button">
             Edit Table
           </button>
         </label>
@@ -71,7 +71,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getAssignmentId()">
+          <button onclick="getAssignmentId()" type="button">
             Edit Table
           </button>
         </label>
@@ -112,7 +112,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getAttendanceId()">
+          <button onclick="getAttendanceId()" type="button">
             Edit Table
           </button>
         </label>
@@ -153,7 +153,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getBacklogsId()">
+          <button onclick="getBacklogsId()" type="button">
             Edit Table
           </button>
         </label>
@@ -191,7 +191,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getBatchId()">
+          <button onclick="getBatchId()" type="button">
             Edit Table
           </button>
         </label>
@@ -237,7 +237,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getBatchSubjectsId()">
+          <button onclick="getBatchSubjectsId()" type="button">
             Edit Table
           </button>
         </label>
@@ -275,7 +275,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getBranchId()">
+          <button onclick="getBranchId()" type="button">
             Edit Table
           </button>
         </label>
@@ -316,7 +316,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getClubId()">
+          <button onclick="getClubId()" type="button">
             Edit Table
           </button>
         </label>
@@ -357,7 +357,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getFacultyId()">
+          <button onclick="getFacultyId()" type="button">
             Edit Table
           </button>
         </label>
@@ -401,7 +401,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getFundsId()">
+          <button onclick="getFundsId()" type="button">
             Edit Table
           </button>
         </label>
@@ -442,7 +442,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getFTimeTableId()">
+          <button onclick="getFTimeTableId()" type="button">
             Edit Table
           </button>
         </label>
@@ -480,7 +480,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getHostelId()">
+          <button onclick="getHostelId()" type="button">
             Edit Table
           </button>
         </label>
@@ -524,7 +524,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getLGradesId()">
+          <button onclick="getLGradesId()" type="button">
             Edit Table
           </button>
         </label>
@@ -562,7 +562,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getMaxLGradesId()">
+          <button onclick="getMaxLGradesId()" type="button">
             Edit Table
           </button>
         </label>
@@ -603,7 +603,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getMaxTGradesId()">
+          <button onclick="getMaxTGradesId()" type="button">
             Edit Table
           </button>
         </label>
@@ -644,7 +644,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getResearchId()">
+          <button onclick="getResearchId()" type="button">
             Edit Table
           </button>
         </label>
@@ -690,7 +690,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getResearchAssistantsId()">
+          <button onclick="getResearchAssistantsId()" type="button">
             Edit Table
           </button>
         </label>
@@ -737,7 +737,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getResearchProposersId()">
+          <button onclick="getResearchProposersId()" type="button">
             Edit Table
           </button>
         </label>
@@ -775,7 +775,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getStudentId()">
+          <button onclick="getStudentId()" type="button">
             Edit Table
           </button>
         </label>
@@ -819,7 +819,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getStudentClubId()">
+          <button onclick="getStudentClubId()" type="button">
             Edit Table
           </button>
         </label>
@@ -857,7 +857,7 @@
           <button type="submit" value="view" name="task" id="view">
             View Table
           </button>
-          <button onclick="getSubjectId()">
+          <button onclick="getSubjectId()" type="button">
             Edit Table
           </button>
         </label>
@@ -901,7 +901,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getSTimeTableId()">
+          <button onclick="getSTimeTableId()" type="button">
             Edit Table
           </button>
         </label>
@@ -942,7 +942,7 @@
           <button type="submit" value="add" name="task" id="view">
             Add Data
           </button>
-          <button onclick="getTGradesId()">
+          <button onclick="getTGradesId()" type="button">
             Edit Table
           </button>
         </label>
@@ -959,6 +959,23 @@
         </button>
       </label>
     </form>
+    <button
+      style="
+        background-color: #282828;
+        border: 1px solid #fabd2f;
+        color: #ebdbb2;
+        padding: 20px 20px;
+        text-align: center;
+        font-size: 20px;
+        position: absolute;
+        top: 50px;
+        left: 80px;
+        border-radius: 10px;
+      "
+      onclick="window.location.href = '/super/portal';"
+    >
+      Back
+    </button>
     <script src="/js/script.js"></script>
   </body>
 </html>
