--- a/views/admin_portal.ejs
+++ b/views/admin_portal.ejs
@@ -1,5 +1,48 @@
 <html lang="en">
   <link rel="stylesheet" href="/css/admin_portal.css">
+  <style>
+
+    button {
+      box-shadow: 0px 5px 0px 0px #282828;
+      background:linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
+      background-color:#ebdbb2;
+      border-radius:15px;
+      border:2px solid #282828;
+      cursor:pointer;
+      color:#32302f;
+      font-family: 'Montserrat';
+      font-size:20px;
+      font-weight:bold;
+      padding:12px 16px;
+      text-decoration:none;
+      text-shadow:0px 1px 0px #ffffff;
+    }
+    button:hover {
+      background:linear-gradient(to bottom, #ccc2a6 5%, #ebdbb2 100%);
+      background-color:#ebdbb2;
+    }
+
+    input[type=text] {
+      font-family: 'Montserrat';
+      font-size:20px;
+      font-weight:bold;
+      padding: 12px 16px;
+      margin: 8px 0;
+      box-sizing: border-box;
+      background-color:#32302f;
+      border:2px solid #ebdbb2;
+      color: #ebdbb2;
+      border-radius:20px;
+    }
+    form{
+      margin-top: 200px;
+      margin-left: 450px;
+    }
+    body{
+      overflow:hidden;
+    }
+
+  </style>
   <body>
     <nav class="menu" tabindex="0">
       <header class="logo">
@@ -17,7 +60,6 @@
       </ul>
     </nav>
 
-
     <!-- Student -->
     <form
       action="./admin_portal"
@@ -34,9 +76,11 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="stud" name="id" required />
+        <input type="text" placeholder="Enter Student ID" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">
+      Search
+      </button>
     </form>
     
     <!-- Faculty -->
@@ -55,9 +99,9 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="fac" name="id" required />
+        <input type="text" placeholder="Enter Faculty ID" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Search</button>
     </form>
 
     <!-- Admin -->
@@ -76,9 +120,9 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="20XXYYYZZZ" name="id" required />
+        <input type="text" placeholder="Enter Admin ID" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Search</button>
     </form>
 
     <!-- Club -->
@@ -97,9 +141,9 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="20XXYYYZZZ" name="id" required />
+        <input type="text" placeholder="Enter Club ID" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Search</button>
     </form>
 
     <!-- Research -->
@@ -118,9 +162,9 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="res" name="id" required />
+        <input type="text" placeholder="Enter Research ID" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Search</button>
     </form>
 
     <!-- Subjects -->
@@ -139,9 +183,9 @@
         />
       </label>
       <label for="id">
-        <input type="text" placeholder="Batch Code" name="id" required />
+        <input type="text" placeholder="Enter Batch Code" name="id" required />
       </label>
-      <button type="submit">SUBMIT</button>
+      <button type="submit">Search</button>
     </form>
 
     <script>
