added editing options in faculty-portal

--- a/views/faculty_portal_pages/page[0].ejs
+++ b/views/faculty_portal_pages/page[0].ejs
@@ -1,4 +1,8 @@
 <style>
+  label {
+    margin-right: 5px;
+  }
+
   .LeftContainer {
     flex: 3;
     display: flex;
@@ -42,33 +46,42 @@
       </h1>
       <img src="/assets/man_with_laptop.png" height="150px" />
     </div>
-    <div
-      style="
-        background-color: var(--primary);
+    <div style="height: 300px; padding: 0; width: 100%; flex-direction: column;">
+      <div style="
+        display: flex;
+        flex: 1;
         padding: 0px 30px;
-        height: 100px;
+        height: 100%;
+        margin: 0;
         width: calc(100% - 60px);
         justify-content: flex-start;
-      "
-    >
-      <i
-        class="material-icons"
-        style="color: white; align-self: center; font-size: 60px;"
-        >done_all</i
-      >
-      <h2 style="margin-left: 50px; color: var(--secondary);">
-        <%=assignment_number%> <br />
-        given for today!
-      </h2>
+      ">
+        <i class="material-icons" style="color: white; font-size: 60px; margin-top: 20px">done_all</i>
+        <h2 style="margin-left: 50px; color: var(--secondary);">
+          <%=assignment_number%> <br />
+        </h2>
+      </div>
+      <!-- TODO add link in action method -->
+      <div style="height: 100%; flex: 2; margin: 0">
+        <form action=""; method="POST">
+          <label>Subject Code: </label>
+          <input type="text"; placeholder="XXXNNNN" name="subjectCode">
+          <br><br><label>Assignment Name: </label>
+          <input type="text"; placeholder="Assignment Name" name="assigmentName">
+          <br><br><label>Due Date:</label>
+          <input type="text"; placeholder="Date Format" name="dueDate">
+          <br><br><input type="submit"; value="Add" name="action">
+          <input type="submit"; value="Remove" name="action">
+          <input type="submit"; value="Edit" name="action">
+        </form>
+      </div>
     </div>
-    <div
-      style="
+    <div style="
         background-color: var(--primary);
         flex-direction: column;
         height: 200px;
         margin-bottom: 0px;
-      "
-    >
+      ">
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
