--- a/views/faculty_portal_pages/page[1].ejs
+++ b/views/faculty_portal_pages/page[1].ejs
@@ -1,12 +1,42 @@
 <link rel="stylesheet" href="../../public/css/student_portal.css">
+<% var studentCode; %>
 <div style="display: flex; flex-direction: column; width: 100%; height: 100%">
-  <div class="ElementsContainer" style="height: 150px;">
+  <div class="ElementsContainer">
     <h3 style="align-self: center">CLASSES</h3>
+    <form action="" ; method="POST">
+      <label>Subject Code: </label>
+      <input type="text" ; placeholder="XXXNNNN" name="subjectCode">
+      <br><br><label>Faculty Code: </label>
+      <input type="text" ; placeholder="Faculty code" name="facultyCode">
+      <br><br><label>Starting Time:</label>
+      <input type="text" ; placeholder="Time" name="startingTime">
+      <br><br><label>Ending Time:</label>
+      <input type="text" ; placeholder="Time" name="endingTime">
+      <br><br><input type="submit" ; value="Add" name="action">
+      <input type="submit" ; value="Remove" name="action">
+    </form>
   </div>
-  <div class="ElementsContainer" style="height: 100px; background-color: var(--primary);">
-    <h3 style="align-self: center">STUDENT GRADES</h3>
+  <div class="ElementsContainer">
+    <h3 style="align-self: center">STUDENT ATTENDANCE</h3>
+    <!-- TODO set studentCode on submission and change defaultPage to this page -->
+    <form action="" ; method="POST">
+      <% if(studentCode == null) {%>
+      <label>Student Roll No: </label>
+      <input type="text" ; placeholder="XXXNNNN" ; name="studentRollNo">
+      <br><br><input type="submit" ; value="submit" name="action">
+      <% } else { %>
+      <br><br><label>Faculty Code: </label>
+      <input type="text" ; placeholder="Faculty code" ; name="faculty">
+      <br><br><label>Current Attendance: </label>
+      <label>9999999</label>
+      <br><br><label>New Attendance:</label>
+      <input type="text" ; placeholder="Attendance" name="newAttendance">
+      <br><br><input type="submit" ; value="Add" name="action">
+      <input type="submit" ; value="Remove" name="action">
+      <% } %>
+    </form>
   </div>
-  <div class="ElementsContainer" style=" background-color: var(--primary);">
+  <div class="ElementsContainer">
     <h3 style="align-self: center;">DATESHEET</h3>
   </div>
 </div>
