--- a/views/faculty_portal_pages/page[0].ejs
+++ b/views/faculty_portal_pages/page[0].ejs
@@ -67,7 +67,7 @@
           <label>Subject Code: </label>
           <input type="text"; placeholder="XXXNNNN" name="subjectCode">
           <br><br><label>Assignment Name: </label>
-          <input type="text"; placeholder="Assignment Name" name="assigmentName">
+          <input type="text"; placeholder="Assignment Name" name="assignmentName">
           <br><br><label>Due Date:</label>
           <input type="text"; placeholder="Date Format" name="dueDate">
           <br><br><input type="submit"; value="Add" name="action">
