--- a/views/student_portal_pages/page[0].ejs
+++ b/views/student_portal_pages/page[0].ejs
@@ -56,8 +56,7 @@
         >done_all</i
       >
       <h2 style="margin-left: 50px; color: var(--secondary);">
-        <%=assignment_number%> <br />
-        due for today!
+        <%=assignment_number%> are due!
       </h2>
     </div>
     <div
@@ -71,6 +70,12 @@
       <h2 style="align-self: center; color: var(--secondary);">
         College News
       </h2>
+      <a
+        href="https://www.iiitm.ac.in/index.php/en/component/content/category/79-latest-news?Itemid=437"
+        style="align-self: center; color: var(--secondary);"
+        target="_blank"
+        ><%=newsHead%></a
+      >
     </div>
   </div>
   <div class="RightContainer">
