--- a/views/student_portal_pages/page[1].ejs
+++ b/views/student_portal_pages/page[1].ejs
@@ -1,80 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <script type="text/javascript"></script>
-    <script src="path/to/chartjs/dist/Chart.js"></script>
-  </head>
-  <body>
-    <canvas id="myChart" width="400" height="400"></canvas>
-    <link rel="stylesheet" href="../../public/css/student_portal.css" />
-    <div
-      style="display: flex; flex-direction: column; width: 100%; height: 100%;"
-    >
-      <div class="ElementsContainer" style="height: 150px;">
-        <h3 style="align-self: center;">ATTENDANCE</h3>
-        <!-- <% for(let i=1; i<=attendanceChartData.length; i++) {%>
-        <div id="chartContainer<%=i%>"></div>
-        <%}%> -->
-        <!-- <div id="myChart"></div> -->
-      </div>
-      <div
-        class="ElementsContainer"
-        style="height: 100px; background-color: var(--primary);"
-      >
-        <h3 style="align-self: center;">GRADES</h3>
-        <!-- <% for(let i=1; i<=gradesChartData.length; i++) {%>
-        <div id="gradesContainer<%=i%>"></div>
-        <%}%> -->
-      </div>
-      <div class="ElementsContainer" style="background-color: var(--primary);">
-        <h3 style="align-self: center;">DATASHEET</h3>
-      </div>
-    </div>
-    <script>
-      var ctx = document.getElementById("myChart");
-      var myChart = new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-          datasets: [
-            {
-              label: "# of Votes",
-              data: [12, 19, 3, 5, 2, 3],
-              backgroundColor: [
-                "rgba(255, 99, 132, 0.2)",
-                "rgba(54, 162, 235, 0.2)",
-                "rgba(255, 206, 86, 0.2)",
-                "rgba(75, 192, 192, 0.2)",
-                "rgba(153, 102, 255, 0.2)",
-                "rgba(255, 159, 64, 0.2)",
-              ],
-              borderColor: [
-                "rgba(255, 99, 132, 1)",
-                "rgba(54, 162, 235, 1)",
-                "rgba(255, 206, 86, 1)",
-                "rgba(75, 192, 192, 1)",
-                "rgba(153, 102, 255, 1)",
-                "rgba(255, 159, 64, 1)",
-              ],
-              borderWidth: 1,
-            },
-          ],
-        },
-        options: {
-          scales: {
-            yAxes: [
-              {
-                ticks: {
-                  beginAtZero: true,
-                },
-              },
-            ],
-          },
-        },
-      });
-    </script>
-  </body>
-</html>
+<link rel="stylesheet" href="../../public/css/student_portal.css" />
+<div style="display: flex; flex-direction: column; width: 100%; height: 100%;">
+  <div class="ElementsContainer" style="height: 150px;">
+    <h3 style="align-self: center;">ATTENDANCE</h3>
+  </div>
+  <div
+    class="ElementsContainer"
+    style="height: 100px; background-color: var(--primary);"
+  >
+    <h3 style="align-self: center;">GRADES</h3>
+  </div>
+  <div class="ElementsContainer" style="background-color: var(--primary);">
+    <h3 style="align-self: center;">DATASHEET</h3>
+  </div>
+</div>
