Now dates can be changed by super admin

--- a/views/super/assignment_add.ejs
+++ b/views/super/assignment_add.ejs
@@ -29,7 +29,7 @@
       </label>
       <label for="due_date">
         Due Date:
-        <input type="text" name="due_date" placeholder="Due Date" required />
+        <input type="text" name="due_date" placeholder="YYYYMMDD" required />
       </label>
       <button type="submit">SUBMIT</button>
     </form>
