--- a/views/super/faculty_add.ejs
+++ b/views/super/faculty_add.ejs
@@ -29,7 +29,7 @@
       </label>
       <label for="dob">
         Date of Birth:
-        <input type="text" name="dob" placeholder="Date of Birth" required />
+        <input type="text" name="dob" placeholder="YYYYMMDD" required />
       </label>
       <label for="room">
         Room: <input type="text" name="room" placeholder="Room" required />
