--- a/views/super/research_add.ejs
+++ b/views/super/research_add.ejs
@@ -25,7 +25,7 @@
         <input
           type="text"
           name="expected_completion_date"
-          placeholder="Expected Completion Date"
+          placeholder="YYYYMMDD"
           required
         />
       </label>
